src/assets/stylesheets/index.scss
/* ... */
//-- carousel & headline with background --//

.carousel-item {
  height: 400px;
}

.header-caption,
.carousel-caption {
  text-align: left;
  .h1,
  .h2,
  .h3,
  .h4,
  .h5,
  .h6 {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    margin: 0;
  }
  .h1,
  .h2,
  .h3,
  .h4,
  .h5,
  .h6 {
    span {
      padding: 10px 15px;
      margin: 3px 0;
    }
  }
}

// -- general badges -- //

.bg-middle-grey {
  color: var(--bs-secondary);
}

// -- general form-control -- //

.form-control {
  border: none;
  border-radius: unset;
}
.form-control:disabled {
  background: rgba(255, 255, 255, 0.65);
  cursor: not-allowed;
}

/* btn + alignment
 =================================================================== */

.btn-block .btn {
  width: 100%;
}

.nav {
  --bs-nav-link-color: var(--bs-primary);
  --bs-nav-link-hover-color: var(--bs-dark);
}

/* navbar
 =================================================================== */

.navbar-brand-logo {
  max-width: 135px;
}
.navbar {
  padding: 0;
}
.navbar-nav.border-left .nav-item {
  border-left: 1px solid var(--border);
}
.navbar-nav.border-left .nav-item:first-child {
  border: none;
}
.navbar-collapse {
  display: flex;
  flex-flow: column;
  width: 100%;
}
.navbar-landing,
.navbar-meta,
.navbar-main {
  display: flex;
  width: 100%;
}
.navbar-meta {
  border-bottom: 1px solid var(--border);
  .dropdown-menu {
    right: 0;
    left: auto;
  }
  .nav-link {
    font-size: 0.75rem;
    opacity: 0.9;
  }
  .nav-link:hover,
  .nav-link:focus {
    color: var(--bs-dropdown-link-hover-color);
    background-color: var(--bs-dropdown-link-hover-bg);
  }
  .nav-link.active,
  .nav-link:active {
    color: var(--bs-dropdown-link-active-color);
    text-decoration: none;
    background-color: var(--bs-dropdown-link-active-bg);
  }
  .nav-link.btn,
  .nav-link.btn:focus {
    border: none;
    background: var(--bs-primary);
    color: #fff;
    line-height: var(--bs-body-line-height);
    padding: var(--bs-nav-link-padding-y);
  }
  .nav-link.btn:hover {
    background: var(--bs-primary-lighten);
  }
  .nav-link.btn:active {
    background: var(--bs-primary-darken);
  }
}

.navbar-main {
  .nav-link {
    font-size: 1rem;
  }

  .form-control {
    font-size: 0.8rem;
    height: 100%;
  }
  .form-control:focus {
    background-color: var(--light-grey);
    box-shadow: 0 0 0 1px var(--bs-primary) inset;
  }
}
.navbar-landing {
  .nav-link {
    font-size: 1rem;
    font-weight: 600;
  }
}
// -- second line in items -- //

.nav-link-extended {
  display: inline-block;
  height: 36px;
  overflow: hidden;
  margin: -16px 0;
  span {
    display: block;
    line-height: 18px;
  }
  span.text-meta {
    color: var(--bs-primary);
    font-size: 9px;
    line-height: 12px;
    font-weight: bold;
    opacity: 0.9;
  }
}

//-- dropdown menu + mega-menu --//

.dropdown-menu {
  --bs-dropdown-zindex: 1000;
  --bs-dropdown-min-width: 10rem;
  --bs-dropdown-padding-x: 0;
  --bs-dropdown-padding-y: 0;
  --bs-dropdown-spacer: 0;
  --bs-dropdown-font-size: 0.875rem;
  --bs-dropdown-color: var(--dark-grey);
  --bs-dropdown-bg: #fff;
  --bs-dropdown-border-color: rgba(0, 0, 0, 0.05);
  --bs-dropdown-border-radius: 0;
  --bs-dropdown-border-width: 1px;
  --bs-dropdown-inner-border-radius: 0;
  --bs-dropdown-divider-bg: var(--bs-border-color-translucent);
  --bs-dropdown-divider-margin-y: 0.5rem;
  --bs-dropdown-box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
  --bs-dropdown-link-color: var(--dark-grey);
  --bs-dropdown-link-hover-color: var(--dark-grey);
  --bs-dropdown-link-hover-bg: var(--middle-grey);
  --bs-dropdown-link-active-color: #fff;
  --bs-dropdown-link-active-bg: var(--bs-primary);
  --bs-dropdown-link-disabled-color: var(--middle-grey);
  --bs-dropdown-item-padding-x: 0.5rem;
  --bs-dropdown-item-padding-y: 0.35rem;
  --bs-dropdown-header-color: #6c757d;
  --bs-dropdown-header-padding-x: 1rem;
  --bs-dropdown-header-padding-y: 0.5rem;
  font-size: var(--bs-dropdown-font-size);
  color: var(--bs-dropdown-color);
  text-align: left;
  list-style: none;
  box-shadow: 0 30px 30px rgba(0, 0, 0, 0.05);
}

.dropdown-divider {
  margin: 0;
  border-top: 1px solid var(--middle-grey);
}

.nav-link i,
.dropdown-item i {
  margin-right: 6px;
}
.mega-menu.dropdown-menu.show {
  display: flex;
}
.mega-menu {
  padding: 0;
}
.mega-menu {
  left: 0;
  right: 0;
  width: 100%;
  margin-top: 20px;
}

.mega-menu {
  ul {
    padding: 10px;
    display: flex;
    flex-wrap: wrap;
  }
  ul li {
    display: flex;
    flex-basis: 50%;
  }
  ul li .dropdown-item {
    padding: 10px;
    white-space: normal;
    display: flex;
    color: var(--dark-grey);
  }
  ul li a i {
    color: var(--bs-primary);
  }

  aside {
    background-color: var(--middle-grey);
    display: flex;
    flex: 0 0 350px;
    align-items: flex-start;
  }
  aside ul li {
    flex-basis: 100%;
  }
  aside ul li img {
    max-width: 50px;
  }
}

/* ============ mobile view ============ */

@media (max-width: 991px) {
  .navbar-collapse {
    flex-flow: column-reverse;
  }
  .navbar-meta,
  .navbar-main {
    flex-flow: column;

    .navbar-nav {
      margin: 0 !important;
    }
    .navbar-nav.border-left {
      .nav-item {
        border: none !important;
      }
    }
    .navbar-nav .dropdown-menu {
      box-shadow: none;
      border: none;
    }

    .nav-link,
    .dropdown-item {
      padding: 0.375rem;
      &:hover {
        background: var(--middle-grey);
      }
      &.active {
        background: var(--bs-primary);
        color: #fff;
      }
    }
  }

  .mega-menu.dropdown-menu.show {
    display: block;
  }

  .form-control {
    background-color: var(--light-grey);
  }
}

@media (max-width: 767px) {
  .mega-menu ul li {
    flex-basis: 100%;
  }
}

/* navbar-toggler
 =================================================================== */

.navbar-toggler:focus {
  box-shadow: none;
}
/* ... */

